--- a/app/src/scss/_partials/landing.scss
+++ b/app/src/scss/_partials/landing.scss
@@ -35,9 +35,9 @@
 	border-radius: 50%;
 	width: 80%;
 	max-width: 400px;
-	will-change: transform;
+	will-change: transform, border-radius;
 	z-index: 3;
-	transition: transform 0.5s;
+	transition: transform 0.5s, border-radius 0.5s;
 }
 .landing-work_box::after{
 	display: block;
