--- a/app/src/scss/_partials/worklist-large.scss
+++ b/app/src/scss/_partials/worklist-large.scss
@@ -1,4 +1,7 @@
 @media only screen and (min-width: 600px){
+  .work-list__meta{
+    padding-top:0;
+  }
   .work-list__item{
     margin-bottom: 1.9rem;
   }
