--- a/app/src/scss/_partials/worklist.scss
+++ b/app/src/scss/_partials/worklist.scss
@@ -40,6 +40,7 @@
 }
 
 .work-list__meta{
+  padding-top:0.25rem;
   position: absolute;
   transition: all .5s ease;
   top: 0.25rem;
